--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   firebase_auth: "^0.20.1"
   firebase_database: "^6.0.0"
   toast: ^0.1.5
+  firebase_storage: ^7.0.0
+  image_picker: ^0.6.7+22
   
 
 dev_dependencies:
